--- a/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
+++ b/04_Expression/scripts/gene_coexpression_module_annotation.ipynb
@@ -20,19 +20,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "a12cd20d-2eb4-46e0-9c02-ac2763ad894f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required namespace: enrichR\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if (!requireNamespace(\"enrichR\")) {\n",
     "    install.packages(\"enrichR\")\n",
@@ -41,46 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "bca1b88c-43bd-42e0-b504-e6249f761933",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.7\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "Welcome to enrichR\n",
-      "Checking connection ... \n",
-      "\n",
-      "Enrichr ... \n",
-      "Connection is Live!\n",
-      "\n",
-      "FlyEnrichr ... \n",
-      "Connection is available!\n",
-      "\n",
-      "WormEnrichr ... \n",
-      "Connection is available!\n",
-      "\n",
-      "YeastEnrichr ... \n",
-      "Connection is available!\n",
-      "\n",
-      "FishEnrichr ... \n",
-      "Connection is available!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(enrichR)\n",
@@ -102,15 +57,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "1b95ebf7-a4df-46e9-9a5d-87a728d397c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "gene.info <- read.table(\"/nfs/team282/data/gains_team282/Gene_info_864_20416.txt\")\n",
-    "modules <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/modules.clr.csv\")\n",
-    "eigengenes <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/eigengenes.clr.csv\", row.names=1)\n",
-    "variance.explained <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/variance.explained.clr.csv\")"
+    "modules <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/modules.csv\")\n",
+    "eigengenes <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/eigengenes.csv\", row.names=1)\n",
+    "variance.explained <- read.csv(\"~/gains_team282/nikhil/expression/gene_expression/variance.explained.csv\")"
    ]
   },
   {
@@ -125,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "9cf76e61-e59f-49d4-bd63-a7ce700b8c2d",
    "metadata": {},
    "outputs": [
@@ -502,6 +457,132 @@
       "  Querying GO_Molecular_Function_2021... Done.\n",
       "  Querying KEGG_2021_Human... Done.\n",
       "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
+      "Parsing results... Done.\n",
+      "Uploading data to Enrichr... Done.\n",
+      "  Querying GO_Biological_Process_2021... Done.\n",
+      "  Querying GO_Cellular_Component_2021... Done.\n",
+      "  Querying GO_Molecular_Function_2021... Done.\n",
+      "  Querying KEGG_2021_Human... Done.\n",
+      "  Querying Reactome_2016... Done.\n",
       "Parsing results... Done.\n"
      ]
     }
@@ -526,7 +607,7 @@
     "module.names <- paste0(\"Module_\", 1:dim(eigengenes)[2])\n",
     "module.list <- lapply(module.names, function(module.name) {\n",
     "  modules %>%\n",
-    "    dplyr::filter(Module.Pruned==module.name) %>%\n",
+    "    dplyr::filter(Module==module.name) %>%\n",
     "    merge(., gene.info, by.x=\"Gene\", by.y=\"gene_id\") %>%\n",
     "    dplyr::select(Gene.ID=Gene, Gene.Name=gene_name)\n",
     "})\n",
@@ -568,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "00208492-7b8b-428e-81f9-3f629247a9d0",
    "metadata": {},
    "outputs": [],
