Updated analyses for thesis

--- a/04_Expression/scripts/wgcna_05_gene_coexpression_module_proportional_hazards_model.ipynb
+++ b/04_Expression/scripts/wgcna_05_gene_coexpression_module_proportional_hazards_model.ipynb
@@ -238,69 +238,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8d8a58d0-be42-4157-adfe-5e772cd1ebb1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Eigengene Association.Variable Association.Variable.Type  Statistic\n",
-      "ME_78      ME_78              Outcome                   Outcome -18.994377\n",
-      "ME_36      ME_36              Outcome                   Outcome -17.553203\n",
-      "ME_52      ME_52              Outcome                   Outcome -16.953562\n",
-      "ME_10      ME_10              Outcome                   Outcome -15.781855\n",
-      "ME_47      ME_47              Outcome                   Outcome -15.378406\n",
-      "ME_13      ME_13              Outcome                   Outcome -14.512508\n",
-      "ME_48      ME_48              Outcome                   Outcome -14.292138\n",
-      "ME_56      ME_56              Outcome                   Outcome  13.816585\n",
-      "ME_8        ME_8              Outcome                   Outcome  13.242037\n",
-      "ME_51      ME_51              Outcome                   Outcome  12.696231\n",
-      "ME_20      ME_20              Outcome                   Outcome -12.535305\n",
-      "ME_105    ME_105              Outcome                   Outcome -12.465533\n",
-      "ME_37      ME_37              Outcome                   Outcome -12.143364\n",
-      "ME_5        ME_5              Outcome                   Outcome -11.966395\n",
-      "ME_33      ME_33              Outcome                   Outcome -11.943306\n",
-      "ME_44      ME_44              Outcome                   Outcome  11.185890\n",
-      "ME_26      ME_26              Outcome                   Outcome -11.035338\n",
-      "ME_38      ME_38              Outcome                   Outcome -10.645209\n",
-      "ME_67      ME_67              Outcome                   Outcome  10.609624\n",
-      "ME_43      ME_43              Outcome                   Outcome  10.593314\n",
-      "ME_49      ME_49              Outcome                   Outcome  10.350081\n",
-      "ME_17      ME_17              Outcome                   Outcome  10.256271\n",
-      "ME_27      ME_27              Outcome                   Outcome -10.040392\n",
-      "ME_15      ME_15              Outcome                   Outcome  -9.371850\n",
-      "ME_99      ME_99              Outcome                   Outcome   9.032458\n",
-      "ME_25      ME_25              Outcome                   Outcome   6.884966\n",
-      "       Statistic.Type      P.Value Adjusted.P.Value\n",
-      "ME_78            Beta 2.100379e-05     0.0007421341\n",
-      "ME_36            Beta 4.786730e-05     0.0008456556\n",
-      "ME_52            Beta 3.800128e-05     0.0008056271\n",
-      "ME_10            Beta 2.037898e-05     0.0007421341\n",
-      "ME_47            Beta 1.266732e-05     0.0007421341\n",
-      "ME_13            Beta 1.414622e-04     0.0016661109\n",
-      "ME_48            Beta 8.358365e-05     0.0012656953\n",
-      "ME_56            Beta 3.495257e-05     0.0008056271\n",
-      "ME_8             Beta 1.249793e-04     0.0016559758\n",
-      "ME_51            Beta 2.975826e-04     0.0031543754\n",
-      "ME_20            Beta 7.418128e-04     0.0065526794\n",
-      "ME_105           Beta 3.236039e-03     0.0168508224\n",
-      "ME_37            Beta 7.311310e-04     0.0065526794\n",
-      "ME_5             Beta 1.175844e-03     0.0077899654\n",
-      "ME_33            Beta 9.362409e-04     0.0070886811\n",
-      "ME_44            Beta 8.678861e-04     0.0070766096\n",
-      "ME_26            Beta 1.814425e-03     0.0106849474\n",
-      "ME_38            Beta 4.343008e-03     0.0191816203\n",
-      "ME_67            Beta 1.088254e-03     0.0076903277\n",
-      "ME_43            Beta 2.715635e-03     0.0151503826\n",
-      "ME_49            Beta 1.663167e-03     0.0103703327\n",
-      "ME_17            Beta 3.733259e-03     0.0179875193\n",
-      "ME_27            Beta 3.338370e-03     0.0168508224\n",
-      "ME_15            Beta 5.723534e-03     0.0242677827\n",
-      "ME_99            Beta 8.808798e-03     0.0359127903\n",
-      "ME_25            Beta 4.042661e-03     0.0186313963\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Eigengene</th><th scope=col>Association.Variable</th><th scope=col>Association.Variable.Type</th><th scope=col>Statistic</th><th scope=col>Statistic.Type</th><th scope=col>P.Value</th><th scope=col>Adjusted.P.Value</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>ME_78</th><td>ME_78</td><td>Outcome</td><td>Outcome</td><td>-18.99438</td><td>Beta</td><td>2.100379e-05</td><td>0.0007421341</td></tr>\n",
+       "\t<tr><th scope=row>ME_36</th><td>ME_36</td><td>Outcome</td><td>Outcome</td><td>-17.55320</td><td>Beta</td><td>4.786730e-05</td><td>0.0008456556</td></tr>\n",
+       "\t<tr><th scope=row>ME_52</th><td>ME_52</td><td>Outcome</td><td>Outcome</td><td>-16.95356</td><td>Beta</td><td>3.800128e-05</td><td>0.0008056271</td></tr>\n",
+       "\t<tr><th scope=row>ME_10</th><td>ME_10</td><td>Outcome</td><td>Outcome</td><td>-15.78185</td><td>Beta</td><td>2.037898e-05</td><td>0.0007421341</td></tr>\n",
+       "\t<tr><th scope=row>ME_47</th><td>ME_47</td><td>Outcome</td><td>Outcome</td><td>-15.37841</td><td>Beta</td><td>1.266732e-05</td><td>0.0007421341</td></tr>\n",
+       "\t<tr><th scope=row>ME_13</th><td>ME_13</td><td>Outcome</td><td>Outcome</td><td>-14.51251</td><td>Beta</td><td>1.414622e-04</td><td>0.0016661109</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 7\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & Eigengene & Association.Variable & Association.Variable.Type & Statistic & Statistic.Type & P.Value & Adjusted.P.Value\\\\\n",
+       "  & <chr> & <chr> & <chr> & <dbl> & <chr> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\tME\\_78 & ME\\_78 & Outcome & Outcome & -18.99438 & Beta & 2.100379e-05 & 0.0007421341\\\\\n",
+       "\tME\\_36 & ME\\_36 & Outcome & Outcome & -17.55320 & Beta & 4.786730e-05 & 0.0008456556\\\\\n",
+       "\tME\\_52 & ME\\_52 & Outcome & Outcome & -16.95356 & Beta & 3.800128e-05 & 0.0008056271\\\\\n",
+       "\tME\\_10 & ME\\_10 & Outcome & Outcome & -15.78185 & Beta & 2.037898e-05 & 0.0007421341\\\\\n",
+       "\tME\\_47 & ME\\_47 & Outcome & Outcome & -15.37841 & Beta & 1.266732e-05 & 0.0007421341\\\\\n",
+       "\tME\\_13 & ME\\_13 & Outcome & Outcome & -14.51251 & Beta & 1.414622e-04 & 0.0016661109\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 7\n",
+       "\n",
+       "| <!--/--> | Eigengene &lt;chr&gt; | Association.Variable &lt;chr&gt; | Association.Variable.Type &lt;chr&gt; | Statistic &lt;dbl&gt; | Statistic.Type &lt;chr&gt; | P.Value &lt;dbl&gt; | Adjusted.P.Value &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| ME_78 | ME_78 | Outcome | Outcome | -18.99438 | Beta | 2.100379e-05 | 0.0007421341 |\n",
+       "| ME_36 | ME_36 | Outcome | Outcome | -17.55320 | Beta | 4.786730e-05 | 0.0008456556 |\n",
+       "| ME_52 | ME_52 | Outcome | Outcome | -16.95356 | Beta | 3.800128e-05 | 0.0008056271 |\n",
+       "| ME_10 | ME_10 | Outcome | Outcome | -15.78185 | Beta | 2.037898e-05 | 0.0007421341 |\n",
+       "| ME_47 | ME_47 | Outcome | Outcome | -15.37841 | Beta | 1.266732e-05 | 0.0007421341 |\n",
+       "| ME_13 | ME_13 | Outcome | Outcome | -14.51251 | Beta | 1.414622e-04 | 0.0016661109 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      Eigengene Association.Variable Association.Variable.Type Statistic\n",
+       "ME_78 ME_78     Outcome              Outcome                   -18.99438\n",
+       "ME_36 ME_36     Outcome              Outcome                   -17.55320\n",
+       "ME_52 ME_52     Outcome              Outcome                   -16.95356\n",
+       "ME_10 ME_10     Outcome              Outcome                   -15.78185\n",
+       "ME_47 ME_47     Outcome              Outcome                   -15.37841\n",
+       "ME_13 ME_13     Outcome              Outcome                   -14.51251\n",
+       "      Statistic.Type P.Value      Adjusted.P.Value\n",
+       "ME_78 Beta           2.100379e-05 0.0007421341    \n",
+       "ME_36 Beta           4.786730e-05 0.0008456556    \n",
+       "ME_52 Beta           3.800128e-05 0.0008056271    \n",
+       "ME_10 Beta           2.037898e-05 0.0007421341    \n",
+       "ME_47 Beta           1.266732e-05 0.0007421341    \n",
+       "ME_13 Beta           1.414622e-04 0.0016661109    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -322,7 +329,7 @@
     "    dplyr::arrange(desc(abs(coef)), desc(desc(Adjusted.P.Value))) %>%\n",
     "    dplyr::mutate(Eigengene=rownames(.), Association.Variable=\"Outcome\", Association.Variable.Type=\"Outcome\", Statistic.Type=\"Beta\") %>%\n",
     "    dplyr::select(Eigengene, Association.Variable, Association.Variable.Type, Statistic=coef, Statistic.Type, P.Value=`Pr(>|z|)`, Adjusted.P.Value)\n",
-    "print(estimates %>% dplyr::filter(Adjusted.P.Value < 0.05))\n",
+    "head(estimates %>% dplyr::filter(Adjusted.P.Value < 0.05))\n",
     "\n",
     "write.csv(estimates, \"~/gains_team282/nikhil/expression/gene_expression/estimates.eigengene.outcome.association.csv\")"
    ]
