--- a/03_Functional_Interpretation/scripts/scissors_scrna_seq.ipynb
+++ b/03_Functional_Interpretation/scripts/scissors_scrna_seq.ipynb
@@ -50,10 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "id": "f076e803-a7ab-4d9e-a14e-a5768340b705",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Attaching SeuratObject\n",
+      "\n",
+      "Registered S3 method overwritten by 'SeuratDisk':\n",
+      "  method            from  \n",
+      "  as.sparse.H5Group Seurat\n",
+      "\n",
+      "Loading required package: Matrix\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mexpand()\u001b[39m masks \u001b[34mMatrix\u001b[39m::expand()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32mpack()\u001b[39m   masks \u001b[34mMatrix\u001b[39m::pack()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mtidyr\u001b[39m::\u001b[32munpack()\u001b[39m masks \u001b[34mMatrix\u001b[39m::unpack()\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘lubridate’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    date, intersect, setdiff, union\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(reticulate)\n",
     "library(Seurat)\n",
@@ -94,19 +132,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "combat.annot <- scanpy$read_h5ad(\"/nfs/users/nfs_n/nm18/gains_team282/nikhil/data/COMBAT/COMBAT-CITESeq-EXPRESSION-ATLAS.h5ad\")"
+    "combat.annot <- scanpy$read_h5ad(\"/nfs/users/nfs_n/nm18/gains_team282/nikhil/data/COMBAT/COMBAT-CITESeq-DATA.h5ad\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "cb00aa6c-9f24-48dc-88c5-8b3b62e8b2df",
    "metadata": {},
    "outputs": [],
    "source": [
     "expression <- t(combat.annot$X)\n",
     "colnames(expression) <- combat.annot$obs_names$to_list()\n",
-    "rownames(expression) <- combat.annot$var_names$to_list()"
+    "rownames(expression) <- combat.annot$var$gene_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3e32e744-4c24-4c2c-a8c1-3d3219d1bb87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>20807</li><li>836148</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 20807\n",
+       "\\item 836148\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 20807\n",
+       "2. 836148\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1]  20807 836148"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dim(expression)"
    ]
   },
   {
@@ -119,14 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "36f8a152-d041-477e-9f03-6ec947fb10e1",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "expression <- expression[combat.annot$var$feature_types == \"Gene Expression\",]\n",
+    "expression <- expression[\n",
+    "    combat.annot$var$feature_types == \"Gene Expression\",\n",
+    "    combat.annot$obs$Source == \"HV\"\n",
+    "]\n",
     "rownames(expression) <- combat.annot$var$gene_ids[combat.annot$var$feature_types == \"Gene Expression\"]\n",
     "expression <- as(expression, \"CsparseMatrix\")"
    ]
@@ -141,21 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "0a111a0d-95fe-45b0-a3a8-33d4ab31d2fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "“The new data doesn't have the same number of features as the current data”\n",
-      "Warning message:\n",
-      "“Adding features not currently present in the object”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "combat <- CreateSeuratObject(expression, min.cells=400, min.features=0)\n",
     "combat <- NormalizeData(combat, normalization.method=\"LogNormalize\", scale.factor=10000, verbose=F)\n",
@@ -168,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "38c4ec67-4e7e-4cdb-8c11-d49bdf3625df",
    "metadata": {},
    "outputs": [],
@@ -178,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "8181f324-e200-4fd2-8671-ffafc9c5df68",
    "metadata": {},
    "outputs": [],
@@ -200,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "c3a95a0d-444a-436c-8e7f-b9c30f03a4e5",
    "metadata": {},
    "outputs": [
@@ -299,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "23d65335-a4f4-491f-8b1c-e99b1dd05667",
    "metadata": {},
    "outputs": [
@@ -412,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "dc0289a0-97b4-43bb-a661-ea4ae54e42c5",
    "metadata": {},
    "outputs": [],
@@ -428,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "b8f1cfec-07cb-43f8-b314-b60107f81f12",
    "metadata": {},
    "outputs": [
@@ -525,12 +595,12 @@
    "source": [
     "## Subset Patients\n",
     "\n",
-    "The same patients have contributed up to three samples to the data (D1, D3, and/or D5). I have decided to choose the last time point available for each patient."
+    "The same patients have contributed up to three samples to the data (D1, D3, and/or D5). I have decided to choose the first time point available for each patient."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "e3cf4c51-57aa-4065-9a89-9e00d738b743",
    "metadata": {},
    "outputs": [],
@@ -538,8 +608,8 @@
     "sample.map <- sample.info %>%\n",
     "    dplyr::filter(GAinSID %in% outcome$GAinSID) %>%\n",
     "    dplyr::group_by(GAinSID) %>%\n",
-    "    dplyr::summarize(Last.Time.Point=max(Time.Point)) %>%\n",
-    "    dplyr::mutate(Sample=paste0(GAinSID, \"_\", Last.Time.Point))\n",
+    "    dplyr::summarize(First.Time.Point=min(Time.Point)) %>%\n",
+    "    dplyr::mutate(Sample=paste0(GAinSID, \"_\", First.Time.Point))\n",
     "\n",
     "gene.exp <- as.matrix(gene.exp[,sample.map$Sample])\n",
     "\n",
@@ -555,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "9076fed3-8bcd-451e-846a-6e3d624b8cb4",
    "metadata": {},
    "outputs": [
@@ -574,14 +644,20 @@
       "\n",
       "Installing package(s) 'preprocessCore'\n",
       "\n",
-      "Old packages: 'blob', 'brew', 'broom', 'Cairo', 'caret', 'circlize', 'clipr',\n",
-      "  'cluster', 'conquer', 'DEoptimR', 'dequer', 'desc', 'doParallel', 'foreach',\n",
-      "  'formatR', 'gdtools', 'gert', 'gower', 'haven', 'km.ci', 'lme4', 'maptools',\n",
-      "  'MASS', 'Matrix', 'mclogit', 'mgcv', 'nlme', 'nloptr', 'pbdZMQ', 'polynom',\n",
-      "  'pracma', 'processx', 'quantreg', 'RcppGSL', 'RCurl', 'readr', 'readxl',\n",
-      "  'recipes', 'reshape', 'Rfast', 'robust', 'robustbase', 'rrcov', 'RSQLite',\n",
-      "  'survival', 'survMisc', 'svglite', 'systemfonts', 'testthat', 'tzdb', 'umap',\n",
-      "  'uuid', 'waldo', 'WGCNA', 'XML'\n",
+      "Old packages: 'BiocManager', 'blob', 'brew', 'broom', 'Cairo', 'car', 'caret',\n",
+      "  'checkmate', 'circlize', 'cli', 'clipr', 'cluster', 'conquer', 'DEoptimR',\n",
+      "  'dequer', 'desc', 'doParallel', 'dplyr', 'energy', 'exactRankTests',\n",
+      "  'foreach', 'formatR', 'future', 'future.apply', 'gdtools', 'gert', 'ggplot2',\n",
+      "  'globals', 'gower', 'gplots', 'haven', 'Hmisc', 'httr', 'igraph', 'km.ci',\n",
+      "  'knitr', 'leiden', 'lme4', 'maptools', 'MASS', 'Matrix', 'matrixStats',\n",
+      "  'mclogit', 'mgcv', 'nlme', 'nloptr', 'openssl', 'parallelly', 'pbdZMQ',\n",
+      "  'pcaPP', 'polynom', 'pracma', 'processx', 'ps', 'psych', 'quantreg',\n",
+      "  'RcppArmadillo', 'RcppGSL', 'RCurl', 'readr', 'readxl', 'recipes', 'reshape',\n",
+      "  'reticulate', 'Rfast', 'rmarkdown', 'rmcorr', 'robust', 'robustbase',\n",
+      "  'roxygen2', 'rrcov', 'RSpectra', 'RSQLite', 'Seurat', 'SeuratObject', 'sp',\n",
+      "  'spatstat', 'spatstat.core', 'spatstat.utils', 'survival', 'survMisc',\n",
+      "  'svglite', 'systemfonts', 'testthat', 'tibble', 'tinytex', 'tzdb', 'umap',\n",
+      "  'uuid', 'waldo', 'WGCNA', 'xfun', 'XML'\n",
       "\n"
      ]
     }
@@ -592,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "e60e3a59-d44c-4ef1-9571-de138f283e38",
    "metadata": {},
    "outputs": [
@@ -603,8 +679,8 @@
      "traceback": [
       "Error in asMethod(object): Cholmod error 'problem too large' at file ../Core/cholmod_dense.c, line 102\nTraceback:\n",
       "1. Scissor(gene.exp, combat, cox.outcomes, alpha = 0.05, family = \"cox\")",
-      "2. as.matrix(sc_dataset@assays$RNA@data)",
-      "3. as.matrix.Matrix(sc_dataset@assays$RNA@data)",
+      "2. as.matrix(sc_dataset@graphs$RNA_snn)",
+      "3. as.matrix.Matrix(sc_dataset@graphs$RNA_snn)",
       "4. as(x, \"matrix\")",
       "5. asMethod(object)"
      ]
@@ -616,71 +692,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "61d3db1d-2bac-4e3a-997e-3f547037b976",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List of 4\n",
-      " $ para       :List of 3\n",
-      "  ..$ alpha : num 0.05\n",
-      "  ..$ lambda: num 0.01\n",
-      "  ..$ family: chr \"cox\"\n",
-      " $ Coefs      : num [1:5000] 0 0 0 0 0 0 0 0 0 0 ...\n",
-      " $ Scissor_pos: chr(0) \n",
-      " $ Scissor_neg: chr [1:713] \"CTCTGGTTCGTACGGC-42\" \"CATATTCTCTGGAGCC-11\" \"CTAGTGAGTTCAGGCC-44\" \"GAACGGAAGGGTGTGT-12\" ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(infos1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "f1cc30de-1137-4536-a616-2c0e30aa175e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "                     CD4-positive, alpha-beta T cell \n",
-       "                                         0.007761966 \n",
-       "      central memory CD4-positive, alpha-beta T cell \n",
-       "                                         0.004086505 \n",
-       "                           double negative thymocyte \n",
-       "                                         0.007127193 \n",
-       "     effector memory CD4-positive, alpha-beta T cell \n",
-       "                                         0.004254502 \n",
-       "                        hematopoietic precursor cell \n",
-       "                                         0.005518764 \n",
-       "                                innate lymphoid cell \n",
-       "                                         0.006756757 \n",
-       "                                       memory B cell \n",
-       "                                         0.004200569 \n",
-       "naive thymus-derived CD8-positive, alpha-beta T cell \n",
-       "                                         0.004149378 \n",
-       "                                 natural killer cell \n",
-       "                                         0.004141075 \n",
-       "                   peripheral blood mononuclear cell \n",
-       "                                         0.015267176 \n",
-       "                                         plasmablast \n",
-       "                                         0.004794885 \n",
-       "                                            platelet \n",
-       "                                         0.004419890 \n",
-       "                                   regulatory T cell \n",
-       "                                         0.004372244 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "freqs <- table(pbmc[[\"cell_type\"]][idx,]) / table(pbmc[[\"cell_type\"]])\n",
     "freqs[freqs > (5000 / ncol(pbmc))]"
@@ -690,6 +715,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d94938be-fc75-4337-8e4c-5e4edc9d24d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d710b5d9-14a2-4ac9-a19d-129f9ed9b446",
    "metadata": {},
    "outputs": [],
    "source": []
