--- a/04_Expression/scripts/wgcna_06_gene_coexpression_module_associations.ipynb
+++ b/04_Expression/scripts/wgcna_06_gene_coexpression_module_associations.ipynb
@@ -64,8 +64,8 @@
      "text": [
       "── \u001b[1mAttaching packages\u001b[22m ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.1 ──\n",
       "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.5     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.6     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.8\n",
       "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.1     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
@@ -477,7 +477,7 @@
     "    rect_gp=gpar(col=\"white\", lwd=2)\n",
     ")\n",
     "\n",
-    "svg(\"04_Expression/results/module_association_heatmap.svg\", width=6, height=20)\n",
+    "pdf(\"04_Expression/results/module_association_heatmap.pdf\", width=6, height=20)\n",
     "h1 + h2 + h3 + h4 + h5\n",
     "dev.off()"
    ]
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "106d06d5-c42f-4609-8973-6d161efa6457",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "23b97fb2-56ea-4777-9d53-ba096aead0a3",
    "metadata": {
     "tags": []
@@ -554,7 +554,7 @@
     "subgroups <- xcell.info$Subgroup\n",
     "names(subgroups) <- xcell.info$Cell.type\n",
     "\n",
-    "svg(\"04_Expression/results/module_xcell_association_heatmap.svg\", width=14, height=20)\n",
+    "pdf(\"04_Expression/results/module_xcell_association_heatmap.pdf\", width=14, height=20)\n",
     "Heatmap(\n",
     "    xcell, name=\"Rho\",\n",
     "    col=col.fun.rho,\n",
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "38258cc5-b83c-4e24-a827-5c1b992dde59",
    "metadata": {},
    "outputs": [],
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "a0261103-2c12-453a-9b46-78c496148a58",
    "metadata": {
     "tags": []
@@ -640,7 +640,7 @@
     "\n",
     "options(repr.plot.width=12, repr.plot.height=20)\n",
     "\n",
-    "svg(\"04_Expression/results/module_cibersort_association_heatmap.svg\", width=12, height=20)\n",
+    "pdf(\"04_Expression/results/module_cibersort_association_heatmap.pdf\", width=12, height=20)\n",
     "ht = Heatmap(\n",
     "    cibersort, name=\"Rho\",\n",
     "    col=col.fun.rho,\n",
